# app/Models/User.php
@@ -14,15 +14,12 @@ use Laravel\Sanctum\HasApiTokens;
  *     schema="User",
  *     title="User",
  *     description="User model",
- *     @OA\Property(property="id", type="integer", description="User ID auto incremented"),
  *    @OA\Property(property="fullname", type="string", description="User fullname"),
  *    @OA\Property(property="adresse", type="string", description="User adresse"),
  *   @OA\Property(property="ville", type="string", description="User ville"),
- *     @OA\Property(property="role_id", type="integer", description="User role ID"),
  *     @OA\Property(property="phone", type="string", description="User phone number"),
  *     @OA\Property(property="email", type="string", format="email", description="User email"),
  *     @OA\Property(property="password", type="string", format="password", description="User password"),
- *     @OA\Property(property="created_at", type="string", format="date-time", description="User creation date and time"),
  *     @OA\Property(property="updated_at", type="string", format="date-time", description="User last update date and time"),
  *    @OA\Property(property="image", type="file", description="photo de l'utilisateur pas obligatoire"),
  *
